exports[`markDomainAsVerified > should update organization members > should call addDomain with 1`] = `
[
  {
    "arguments": [
      {
        "organization_id": 42,
        "domain": "darkangels.world",
        "verification_type": "verified"
      }
    ],
    "result": {},
    "stack": {}
  }
]
`;

exports[`markDomainAsVerified > should update organization members > should call deleteEmailDomainsByVerificationTypes with 1`] = `
[
  {
    "arguments": [
      {
        "organization_id": 42,
        "domain": "darkangels.world",
        "domain_verification_types": [
          "official_contact",
          "trackdechets_postal_mail",
          "verified",
          "external",
          "not_verified_yet"
        ]
      }
    ],
    "result": {},
    "stack": {}
  }
]
`;

exports[`markDomainAsVerified > should update organization members > should call updateUserOrganizationLink with 1`] = `
[
  {
    "arguments": [
      42,
      42,
      {
        "verification_type": "domain"
      }
    ],
    "result": {},
    "stack": {}
  }
]
`;
